# FrogGame

./: .gitignore  CMakeLists.txt  README.md  main.c  settings.fg
includes/: background.h  car.h  colors.h  frog.h  game.h  loop.h  obstacle.h  settings.h  setup.h  utility.h  win_info.h
includes/interfaces/: drawing.h  events.h  position.h
src/: background.c  car.c  colors.c  frog.c  game.c  loop.c  obstacle.c  settings.c  setup.c  utility.c  win_info.c
src/interfaces/: drawing.c  events.c  position.c
